[package]
name = "fix-stacks"
version = "0.1.0"
authors = ["Nicholas Nethercote <nnethercote@mozilla.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.32"
futures = "0.3.25"
fxhash = "0.2.1"
regex = "1.5.5"
serde_json = "1.0"
wholesym = { path = "../samply/wholesym" }

[profile.release]
lto = true
